docs: update CHANGELOG with release history